Generating the navbar component to hold the Appbar Adding required fonts

--- a/src/styles/fonts.scss
+++ b/src/styles/fonts.scss
@@ -1,3 +1,5 @@
+//Poppins
+
 @font-face{
     font-family: 'Poppins-regular';
     src: url('../assets/fonts/poppins/Poppins-Regular.ttf');
@@ -21,4 +23,32 @@
 @font-face{
     font-family: 'Poppins-semibold';
     src: url('../assets/fonts/poppins/Poppins-SemiBold.ttf')
+}
+
+//--------------------------------------------------------------------------
+
+//Manrope
+@font-face{
+    font-family: 'Manrope-regular';
+    src: url('../assets/fonts/manrope/Manrope-Regular.ttf');
+}
+
+@font-face{
+    font-family: 'Manrope-light';
+    src: url('../assets/fonts/manrope/Manrope-Light.ttf');
+}
+
+@font-face{
+    font-family: 'Manrope-medium';
+    src: url('../assets/fonts/manrope/Manrope-Medium.ttf');
+}
+
+@font-face{
+    font-family: 'Manrope-bold';
+    src: url('../assets/fonts/manrope/Manrope-Bold.ttf');
+}
+
+@font-face{
+    font-family: 'Manrope-semibold';
+    src: url('../assets/fonts/manrope/Manrope-SemiBold.ttf')
 }
