Minor modifications related to layout

--- a/src/components/UI/AdSectionContent/index.scss
+++ b/src/components/UI/AdSectionContent/index.scss
@@ -8,7 +8,7 @@
 
 .text-wrapper{
     font-family: 'Manrope-regular';
-    font-size: 16px;
+    font-size: 1vw;
     margin-top: 8px;
     color: #343D48;
 
@@ -22,8 +22,8 @@
     color: #fff;
     border: none;
     background-color: #6337BE;
-    width: 210px;
-    height: 56px;
+    width: 180px;
+    height: 47px;
     font-family: 'Poppins-semibold';
     font-size: 14px;
     border-radius: 6px;
