--- a/src/components/UI/Navbar/index.scss
+++ b/src/components/UI/Navbar/index.scss
@@ -2,21 +2,36 @@
 .appbar-wrapper{
     background-color: transparent !important;
     box-shadow: none !important;
+    padding-top: 10px;
     button {
         color: #0F2137;
-        font-size: 13px;
-        font-weight: 700;
+        font-size: 14px;
+        font-weight: bold;
         font-style: normal;
         text-transform: none;
         font-family: 'Manrope-regular';
-        padding: 19px 35px;
+        padding: 15px 10px;
         margin: 1px;
+        line-height: 19.12px;
+        width: 127px;
 
         &:hover, &:focus{
            background-color: #1AC587; 
            border-radius: 6px;
            color: #fff;
+            font-family: 'Poppins-regular';
+            line-height: 18px;
+            letter-spacing: -1%;
         }
+    }
+
+    button.selected{
+        background-color: #1AC587; 
+        border-radius: 6px;
+        color: #fff;
+         font-family: 'Poppins-regular';
+         line-height: 18px;
+         letter-spacing: -1%;
     }
 }
 
