--- a/src/components/UI/AdSectionContent/index.scss
+++ b/src/components/UI/AdSectionContent/index.scss
@@ -8,9 +8,10 @@
 
 .text-wrapper{
     font-family: 'Manrope-regular';
-    font-size: 1vw;
+    font-size: 16px;
     margin-top: 8px;
     color: #343D48;
+    line-height: 30px;
 
 }
 
@@ -30,3 +31,24 @@
     cursor: pointer;
     filter: drop-shadow( 0px 5px 3px rgba(0, 0, 0, 0.25));
 }
+
+@media screen and (max-width: 478px) {
+   .adsection-content{
+       text-align: center;
+       padding: 15px 10px;
+   }
+
+   .text-wrapper{
+       font-size: 12px;
+   }
+
+   .button-wrapper{
+       margin-top: 20px;
+   }
+
+   .adsection-button{
+    width: 120px;
+    height: 40px;
+    font-size: 12px;
+   }
+  }
