minor fixes related to desktop layout

--- a/src/components/UI/AdSectionContent/index.scss
+++ b/src/components/UI/AdSectionContent/index.scss
@@ -9,7 +9,7 @@
 .text-wrapper{
     font-family: 'Manrope-regular';
     font-size: 16px;
-    margin-top: 8px;
+    margin-top:-15px;
     color: #343D48;
     line-height: 30px;
 
@@ -43,7 +43,7 @@
    }
 
    .button-wrapper{
-       margin-top: 20px;
+       margin: 20px 0px;
    }
 
    .adsection-button{
