--- a/src/components/UI/Navbar/index.scss
+++ b/src/components/UI/Navbar/index.scss
@@ -21,7 +21,7 @@
            color: #fff;
             font-family: 'Poppins-regular';
             line-height: 18px;
-            letter-spacing: -1%;
+            //letter-spacing: -1%;
         }
     }
 
@@ -59,3 +59,17 @@
         margin-left: 1px;
     }
   } 
+
+  @media screen and (min-width: 478px) and  (max-width: 1000px), (max-width:1240px) {
+    .logo-wrapper{
+        margin-left: 1px;
+    }
+
+    .appbar-wrapper {
+        button{
+            font-size: 11px;
+            padding: 11px 9px;
+            width: 92px;
+        }
+  } 
+}
