continue modifications on responsiveness

--- a/src/components/UI/AdSection/index.scss
+++ b/src/components/UI/AdSection/index.scss
@@ -11,3 +11,10 @@
         display: none;
     }
   }
+
+  @media screen and (min-width: 478px) and (max-width: 600px) {
+
+    .isMobile{
+        display: none;
+    }
+  }
