--- a/src/index.scss
+++ b/src/index.scss
@@ -1,8 +1,9 @@
-@import './styles/fonts.scss';
+@import './styles/fonts';
+@import './styles/variables';
 
 body {
   margin: 0;
-  font-family: 'Poppins-regular', 'Segoe UI', 'Roboto', 'Oxygen',
+  font-family: $font-poppins-regular, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
