--- a/src/components/UI/AdSection/index.scss
+++ b/src/components/UI/AdSection/index.scss
@@ -1,10 +1,12 @@
+@import '../../../styles/variables';
+
 .adsection-wrapper{
     padding: 10px;
 }
 
 @media screen and (max-width: 478px) {
     .adsection-wrapper{
-        background-color: #FBFBFD;
+        background-color: $main-light-background;
         margin-top: 0px;
     }
     .isMobile{
