--- a/src/components/UI/FeaturesSection/index.scss
+++ b/src/components/UI/FeaturesSection/index.scss
@@ -1,3 +1,5 @@
+@import '../../../styles/variables';
+
 .featuresection-wrapper{
     width: 100%;
     text-align: center;
@@ -6,20 +8,20 @@
     justify-content: center;
     flex-direction: column;
     align-items: center;
-    background-color: #FBFBFD;
+    background-color: $main-light-background;
     border-radius: 36px;
     padding: 50px 0px;
 }
 
 .featuresection-title{
-    font-family: 'Poppins-semibold';
+    font-family: $font-poppins-semibold;
     font-size: 30px;
 }
 
 .featuresection-subtitle{
-    font-family: 'Poppins-regular';
+    font-family: $font-poppins-regular;
     font-size: 16px;
-    color: #343D48;
+    color: $main-gray;
     margin-top: 10px;
     width: 50%;
 }
@@ -34,12 +36,12 @@
 }
 
 .trynow-btn{
-    color: #fff;
+    color: $white;
     border: none;
-    background-color: #6337BE;
+    background-color: $main-purple;
     width: 180px;
     height: 47px;
-    font-family: 'Poppins-semibold';
+    font-family: $font-poppins-semibold;
     font-size: 14px;
     border-radius: 6px;
     cursor: pointer;
