--- a/src/components/UI/AdSectionContent/index.scss
+++ b/src/components/UI/AdSectionContent/index.scss
@@ -1,4 +1,5 @@
 @import '../../../styles/variables';
+@import '../../../styles/mixins';
 
 .adsection-content-wrapper{
     text-align: left;
@@ -22,16 +23,9 @@
 }
 
 .adsection-button{
-    color: $white;
-    border: none;
-    background-color: $main-purple;
-    width: 180px;
-    height: 47px;
+    @include button($white, $main-purple, 180px, 47px, true);
     font-family: $font-poppins-semibold;
     font-size: 14px;
-    border-radius: 6px;
-    cursor: pointer;
-    filter: drop-shadow( 0px 5px 3px rgba(0, 0, 0, 0.25));
 }
 
 @media screen and (max-width: 478px) {
@@ -50,8 +44,7 @@
    }
 
    .adsection-button{
-    width: 120px;
-    height: 40px;
+    @include button($white, $main-purple, 120px, 40px);
     font-size: 12px;
    }
   }
@@ -72,8 +65,7 @@
   }
 
   .adsection-button{
-      width: 100px;
-      height: 35px;
+    @include button($white, $main-purple, 100px, 35px);
       font-size: 12px;
   }
 }
