--- a/src/components/UI/FeaturesSection/index.scss
+++ b/src/components/UI/FeaturesSection/index.scss
@@ -1,4 +1,5 @@
 @import '../../../styles/variables';
+@import '../../../styles/mixins';
 
 .featuresection-wrapper{
     width: 100%;
@@ -31,20 +32,14 @@
     width: 100%;
 }
 
-.featuresection-button{
+.featuresection-button-wrapper{
     margin-top: 70px;
 }
 
-.trynow-btn{
-    color: $white;
-    border: none;
-    background-color: $main-purple;
-    width: 180px;
-    height: 47px;
+.featuresection-button{
+    @include button($white, $main-purple, 180px, 47px);
     font-family: $font-poppins-semibold;
     font-size: 14px;
-    border-radius: 6px;
-    cursor: pointer;
 }
 
 @media screen and (max-width: 478px) {
@@ -67,13 +62,12 @@
         margin-top: 5px;
     }
 
-    .featuresection-button{
+    .featuresection-button-wrapper{
         margin-top: 25px;
     }
 
-    .trynow-btn{
-        width: 120px;
-        height: 42px;
+    .featuresection-button{
+        @include button($white, $main-purple, 120px, 42px);
         font-size: 12px;
     }
 
@@ -95,13 +89,12 @@
         margin-top: 5px;
     }
 
-    .featuresection-button{
+    .featuresection-button-wrapper{
         margin-top: 25px;
     }
 
-    .trynow-btn{
-        width: 100px;
-        height: 35px;
+    .featuresection-button{
+        @include button($white, $main-purple, 100px, 35px);
         font-size: 12px;
     }
 }
