--- a/src/components/containers/App/index.scss
+++ b/src/components/containers/App/index.scss
@@ -1,38 +1,38 @@
-@import '../../../styles/variables';
+@import "../../../styles/variables";
 
-.vector-bg{
-    z-index: -10;
-    position: absolute;
-    top: -14px;
-    left: -356px;
-    width: 1448px;
-    height: 700px;
+.vector-bg {
+  z-index: -10;
+  position: absolute;
+  top: -14px;
+  left: -356px;
+  width: 1448px;
+  height: 700px;
 }
 
-.content{
-    padding: 20px 70px;
+.content {
+  padding: 20px 70px;
 }
 
 @media screen and (max-width: 478px) {
-    .content{
-        padding: 0;
-    }
-
-    .vector-bg{
-        display: none;
-    }
-  } 
-
-  @media screen and (min-width: 478px) and  (max-width: 1000px){
-    .vector-bg{
-        height: 446px;
-        width: 845px;
-    }
+  .content {
+    padding: 0;
   }
 
-  @media screen and (min-width: 1000px) and (max-width:1200px){
-      .vector-bg{
-          height: 566px;
-          width: 1261px;
-      }
+  .vector-bg {
+    display: none;
   }
+}
+
+@media screen and (min-width: 478px) and (max-width: 1000px) {
+  .vector-bg {
+    height: 446px;
+    width: 845px;
+  }
+}
+
+@media screen and (min-width: 1000px) and (max-width: 1200px) {
+  .vector-bg {
+    height: 566px;
+    width: 1261px;
+  }
+}
