--- a/src/styles/_fonts.scss
+++ b/src/styles/_fonts.scss
@@ -1,54 +1,54 @@
 //Poppins
 
-@font-face{
-    font-family: 'Poppins-regular';
-    src: url('../assets/fonts/poppins/Poppins-Regular.ttf');
+@font-face {
+  font-family: "Poppins-regular";
+  src: url("../assets/fonts/poppins/Poppins-Regular.ttf");
 }
 
-@font-face{
-    font-family: 'Poppins-light';
-    src: url('../assets/fonts/poppins/Poppins-Light.ttf');
+@font-face {
+  font-family: "Poppins-light";
+  src: url("../assets/fonts/poppins/Poppins-Light.ttf");
 }
 
-@font-face{
-    font-family: 'Poppins-medium';
-    src: url('../assets/fonts/poppins/Poppins-Medium.ttf');
+@font-face {
+  font-family: "Poppins-medium";
+  src: url("../assets/fonts/poppins/Poppins-Medium.ttf");
 }
 
-@font-face{
-    font-family: 'Poppins-bold';
-    src: url('../assets/fonts/poppins/Poppins-Bold.ttf');
+@font-face {
+  font-family: "Poppins-bold";
+  src: url("../assets/fonts/poppins/Poppins-Bold.ttf");
 }
 
-@font-face{
-    font-family: 'Poppins-semibold';
-    src: url('../assets/fonts/poppins/Poppins-SemiBold.ttf')
+@font-face {
+  font-family: "Poppins-semibold";
+  src: url("../assets/fonts/poppins/Poppins-SemiBold.ttf");
 }
 
 //--------------------------------------------------------------------------
 
 //Manrope
-@font-face{
-    font-family: 'Manrope-regular';
-    src: url('../assets/fonts/manrope/Manrope-Regular.ttf');
+@font-face {
+  font-family: "Manrope-regular";
+  src: url("../assets/fonts/manrope/Manrope-Regular.ttf");
 }
 
-@font-face{
-    font-family: 'Manrope-light';
-    src: url('../assets/fonts/manrope/Manrope-Light.ttf');
+@font-face {
+  font-family: "Manrope-light";
+  src: url("../assets/fonts/manrope/Manrope-Light.ttf");
 }
 
-@font-face{
-    font-family: 'Manrope-medium';
-    src: url('../assets/fonts/manrope/Manrope-Medium.ttf');
+@font-face {
+  font-family: "Manrope-medium";
+  src: url("../assets/fonts/manrope/Manrope-Medium.ttf");
 }
 
-@font-face{
-    font-family: 'Manrope-bold';
-    src: url('../assets/fonts/manrope/Manrope-Bold.ttf');
+@font-face {
+  font-family: "Manrope-bold";
+  src: url("../assets/fonts/manrope/Manrope-Bold.ttf");
 }
 
-@font-face{
-    font-family: 'Manrope-semibold';
-    src: url('../assets/fonts/manrope/Manrope-SemiBold.ttf')
+@font-face {
+  font-family: "Manrope-semibold";
+  src: url("../assets/fonts/manrope/Manrope-SemiBold.ttf");
 }
