--- a/src/components/UI/MoreButton/index.scss
+++ b/src/components/UI/MoreButton/index.scss
@@ -1,21 +1,22 @@
-@import '../../../styles/variables';
+@import "../../../styles/variables";
 
-.more-btn{
-    &:hover, &:focus{
-        background-color: transparent !important;
-        color: $black !important;
-    }
+.more-btn {
+  &:hover,
+  &:focus {
+    background-color: transparent !important;
+    color: $black !important;
+  }
 }
 
-.more-btn-menu{
-    li {
-        font-family: $font-poppins-semibold;
-        font-size: 14px;
-        padding: 10px 25px;
+.more-btn-menu {
+  li {
+    font-family: $font-poppins-semibold;
+    font-size: 14px;
+    padding: 10px 25px;
 
-        &:hover{
-            background-color: $main-green !important;
-            color: $white !important;
-        }
+    &:hover {
+      background-color: $main-green !important;
+      color: $white !important;
     }
+  }
 }
