--- a/src/components/UI/Navbar/index.scss
+++ b/src/components/UI/Navbar/index.scss
@@ -1,76 +1,78 @@
-@import '../../../styles/variables';
+@import "../../../styles/variables";
 
-.appbar-wrapper{
-    background-color: transparent !important;
-    box-shadow: none !important;
-    padding-top: 10px;
-    button {
-        color: $main-dark;
-        font-size: 14px;
-        font-weight: bold;
-        font-style: normal;
-        text-transform: none;
-        font-family: $font-manrope-regular;
-        padding: 15px 10px;
-        margin: 1px;
-        line-height: 19.12px;
-        width: 127px;
+.appbar-wrapper {
+  background-color: transparent !important;
+  box-shadow: none !important;
+  padding-top: 10px;
+  button {
+    color: $main-dark;
+    font-size: 14px;
+    font-weight: bold;
+    font-style: normal;
+    text-transform: none;
+    font-family: $font-manrope-regular;
+    padding: 15px 10px;
+    margin: 1px;
+    line-height: 19.12px;
+    width: 127px;
 
-        &:hover, &:focus{
-           background-color: $main-green; 
-           border-radius: 6px;
-           color: $white;
-            font-family: $font-poppins-regular;
-            line-height: 18px;
-            letter-spacing: -1%;
-        }
+    &:hover,
+    &:focus {
+      background-color: $main-green;
+      border-radius: 6px;
+      color: $white;
+      font-family: $font-poppins-regular;
+      line-height: 18px;
+      letter-spacing: -1%;
     }
+  }
 
-    button.selected{
-        background-color: $main-green; 
-        border-radius: 6px;
-        color: $white;
-         font-family: $font-poppins-regular;
-         line-height: 18px;
-         letter-spacing: -1%;
-    }
+  button.selected {
+    background-color: $main-green;
+    border-radius: 6px;
+    color: $white;
+    font-family: $font-poppins-regular;
+    line-height: 18px;
+    letter-spacing: -1%;
+  }
 }
 
-.logo-wrapper{
-    flex-grow: 1;
-    margin-left: 65px;
+.logo-wrapper {
+  flex-grow: 1;
+  margin-left: 65px;
 }
 
 // IPhone 8 and smaller screens
 @media screen and (max-width: 478px) {
-    .appbar-wrapper {
-      background-color: $white !important;
-      padding:10px 0px;
-        border-bottom: 1px solid $main-light-gray;
-      button{
-          display: none;
-      }
-        
-      button.isMobile{
-          display: block ;
-      }
+  .appbar-wrapper {
+    background-color: $white !important;
+    padding: 10px 0px;
+    border-bottom: 1px solid $main-light-gray;
+    button {
+      display: none;
     }
 
-    .logo-wrapper{
-        margin-left: 1px;
+    button.isMobile {
+      display: block;
     }
-  } 
+  }
 
-  @media screen and (min-width: 478px) and  (max-width: 1000px), (max-width:1240px) {
-    .logo-wrapper{
-        margin-left: 1px;
+  .logo-wrapper {
+    margin-left: 1px;
+  }
+}
+
+@media screen and (min-width: 478px) and (max-width: 1000px),
+  (max-width: 1240px) {
+  .logo-wrapper {
+    margin-left: 1px;
+  }
+
+  .appbar-wrapper {
+    button {
+      font-size: 11px;
+      padding: 11px 9px;
+      width: 92px;
     }
-
-    .appbar-wrapper {
-        button{
-            font-size: 11px;
-            padding: 11px 9px;
-            width: 92px;
-        }
-  } 
+  }
 }
