--- a/src/index.scss
+++ b/src/index.scss
@@ -1,11 +1,10 @@
-@import './styles/fonts';
-@import './styles/variables';
+@import "./styles/fonts";
+@import "./styles/variables";
 
 body {
   margin: 0;
-  font-family: $font-poppins-regular, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  font-family: $font-poppins-regular, "Segoe UI", "Roboto", "Oxygen", "Ubuntu",
+    "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
