--- a/src/components/UI/MainBanner/index.scss
+++ b/src/components/UI/MainBanner/index.scss
@@ -1,11 +1,11 @@
 @import "../../../styles/variables";
 
-.adsection-wrapper {
+.mainbanner-wrapper {
   padding: 10px;
 }
 
 @media screen and (max-width: 478px) {
-  .adsection-wrapper {
+  .mainbanner-wrapper {
     background-color: $main-light-background;
     margin-top: 0px;
   }
