--- a/src/components/UI/MainBannerImg/index.scss
+++ b/src/components/UI/MainBannerImg/index.scss
@@ -1,11 +1,11 @@
-.adsection-img-wrapper{
+.mainbanner-img-wrapper{
     width: 100%;
     height: 100%;
     display: flex;
     align-items: center;
 }
 
-.adsection-img{
+.mainbanner-img{
     height: auto;
     max-width: 100%;
 }
