--- a/src/components/UI/MoreButton/index.scss
+++ b/src/components/UI/MoreButton/index.scss
@@ -1,5 +1,9 @@
 @import "../../../styles/variables";
 
+// -------------------------- //
+// -- More Button styles ---- //
+// -------------------------- //
+
 .more-btn {
   &:hover,
   &:focus {
