--- a/src/index.scss
+++ b/src/index.scss
@@ -1,6 +1,10 @@
 @import "./styles/fonts";
 @import "./styles/variables";
 
+// -------------------------- //
+// -- Main project styles -- //
+// -------------------------- //
+
 body {
   margin: 0;
   font-family: $font-poppins-regular, "Segoe UI", "Roboto", "Oxygen", "Ubuntu",
