--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -1,3 +1,8 @@
+/**
+* Holds styles' default variables to be used in scss files
+** Currently has color and font variables
+**/
+
 // MAIN COLORS
 $black: #000;
 $white: #fff;
