--- a/src/components/UI/MainBanner/index.scss
+++ b/src/components/UI/MainBanner/index.scss
@@ -1,9 +1,14 @@
 @import "../../../styles/variables";
 
+// -------------------------- //
+// -- Main Banner styles ---- //
+// -------------------------- //
+
 .mainbanner-wrapper {
   padding: 10px;
 }
 
+// for mobile and small screen sizes
 @media screen and (max-width: 478px) {
   .mainbanner-wrapper {
     background-color: $main-light-background;
@@ -14,6 +19,7 @@
   }
 }
 
+//for tablet screen sizes
 @media screen and (min-width: 478px) and (max-width: 600px) {
   .isMobile {
     display: none;
