--- a/src/components/UI/MainBannerImg/index.scss
+++ b/src/components/UI/MainBannerImg/index.scss
@@ -1,3 +1,7 @@
+// ------------------------------ //
+// -- Main Banner Image styles -- //
+// ------------------------------ //
+
 .mainbanner-img-wrapper{
     width: 100%;
     height: 100%;
