--- a/src/components/UI/Navbar/index.scss
+++ b/src/components/UI/Navbar/index.scss
@@ -1,5 +1,9 @@
 @import "../../../styles/variables";
 
+// -------------------------- //
+// ------ Navbar styles ----- //
+// -------------------------- //
+
 .appbar-wrapper {
   background-color: transparent !important;
   box-shadow: none !important;
@@ -42,7 +46,7 @@
   margin-left: 65px;
 }
 
-// IPhone 8 and smaller screens
+// for mobile and small screens
 @media screen and (max-width: 478px) {
   .appbar-wrapper {
     background-color: $white !important;
@@ -62,6 +66,7 @@
   }
 }
 
+//for tablet and small desktop screen sizes
 @media screen and (min-width: 478px) and (max-width: 1000px),
   (max-width: 1240px) {
   .logo-wrapper {
