--- a/src/styles/_fonts.scss
+++ b/src/styles/_fonts.scss
@@ -1,5 +1,9 @@
-//Poppins
+/*
+* Holds all the fonts that have been used in the project
+* using font-facein order to read the font with their src file and using them via font-family
+*/
 
+//Poppins
 @font-face {
   font-family: "Poppins-regular";
   src: url("../assets/fonts/poppins/Poppins-Regular.ttf");
